# Luna-cli

./: ASCII.txt  BUILD_SUMMARY.md  CHAT_GUIDE.md  DEMO.md  DEVELOPMENT_PLAN.md  INSTALLATION_GUIDE.md  PKGBUILD  PROJECT_STATUS.md  QUICK_START.md  README.md  deploy_aur.sh  install-system.sh  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  validate.sh
docs/: INSTALLATION.md
luna/: __init__.py  cli.py
luna/api/: __init__.py
luna/assistant/: __init__.py
luna/chat/: __init__.py  agent.py  chat.py  tools.py
luna/commands/: __init__.py  api.py  chat.py  code.py  files.py  git.py  models.py  setup.py  system.py  trust.py
luna/config/: __init__.py  config.py
luna/core/: __init__.py  session.py
luna/files/: __init__.py
luna/providers/: __init__.py  base.py  gemini.py  groq.py  nvidia.py  ollama.py  openai.py  openrouter.py
luna/terminal/: __init__.py
luna/ui/: __init__.py  theme.py
luna_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: index.tsx
